--- a/transaction-service/.env
+++ b/transaction-service/.env
@@ -1,6 +1,8 @@
 DB_HOST=localhost
+DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=root
 DB_NAME=mini_pos
-DB_PORT=5432
+DB_SSLMODE=disable
+PRODUCT_SERVICE_URL=http://localhost:8081
 PORT=8082
