--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ services:
       PORT: "8080"
       PRODUCT_SERVICE_URL: http://product-service:8081
       TRANSACTION_SERVICE_URL: http://transaction-service:8082
+      REPORTING_SERVICE_URL: http://transaction-service:8082
     ports:
       - "8080:8080"
     depends_on:
